# wagtail-2fa-v6

./: .gitignore  CHANGES  LICENSE  MANIFEST.in  Makefile  README.md  README.rst  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/: dependabot.yml
.github/workflows/: python-release.yml  python-tox.yml
docs/: conf.py
docs/_templates/: sidebar-intro.html
sandbox/: requirements.txt
sandbox/sandbox/: settings.py
src/wagtail_2fa/: wagtail_hooks.py
src/wagtail_2fa/templates/wagtail_2fa/: otp_form.html
tests/: conftest.py
